# textual-text-area-vim-mode

./: .gitignore  README.md  app.py  pyproject.toml
text_area_vim/: __init__.py  find_motions.py  matching_pairs.py  textareavim.py  types.py
