[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-vim"
version = "0.1.0"
description = "A Textual widget for a text area based on VIM"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "textual",
]
dependencies = [
    "textual==8.2.7",
]

[tool.mypy]
disable_error_code = ["attr-defined", "no-untyped-call"]

[tool.ruff]
ignore = ["PYI022", "FBT001"]

[tool.pyright]
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
